force-app/main/default/objects/Customer_Testimonial__c/Customer_Testimonial__c.object-meta.xml
<CustomObject>
    <description>Record customer testimonials</description>
    <label>Customer Testimonial</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Customer Testimonial Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Testimonials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>