force-app/main/default/objects/Customer_Testimonial__c/fields/Associated_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Associated_Vertical__c</fullName>
    <formula>TEXT(Account__r.Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Vertical</label>
    <type>Text</type>
</CustomField>