force-app/main/default/objects/Customer_Testimonial__c/fields/Business_Presence_In_US__c.field-meta.xml
<CustomField>
    <fullName>Business_Presence_In_US__c</fullName>
    <label>Business Presence In US?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>