force-app/main/default/objects/Customer_Testimonial__c/fields/Circle_Account__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle Account</label>
    <referenceTo>Circle_Account__c</referenceTo>
    <relationshipLabel>Customer Testimonials</relationshipLabel>
    <relationshipName>Customer_Testimonials</relationshipName>
    <type>Lookup</type>
</CustomField>