force-app/main/default/objects/Customer_Testimonial__c/fields/Circle_POC__c.field-meta.xml
<CustomField>
    <fullName>Circle_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This contact is best suited to work with internal marketing teams to provide details regarding the customer relationship, and their use case, and be the conduit between Circle marketing teams and the customer.</description>
    <inlineHelpText>This contact is best suited to work with internal marketing teams to provide details regarding the customer relationship, and their use case, and be the conduit between Circle marketing teams and the customer.</inlineHelpText>
    <label>Circle POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Testimonials</relationshipName>
    <type>Lookup</type>
</CustomField>