force-app/main/default/objects/Customer_Testimonial__c/fields/Company_HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>Company_HQ_Country__c</fullName>
    <label>Company HQ (Country)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_of_Incorporation</valueSetName>
    </valueSet>
</CustomField>