force-app/main/default/objects/Customer_Testimonial__c/fields/Company_HQ_State__c.field-meta.xml
<CustomField>
    <fullName>Company_HQ_State__c</fullName>
    <label>Company HQ (State)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>