force-app/main/default/objects/Customer_Testimonial__c/fields/Company_Willing_To_Provide_Following__c.field-meta.xml
<CustomField>
    <fullName>Company_Willing_To_Provide_Following__c</fullName>
    <label>Company Willing To Provide Following</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowing For Broad Logo Use</fullName>
            </value>
            <value>
                <fullName>Customer Story (Circle written webpage)</fullName>
            </value>
            <value>
                <fullName>Customer Written Quote</fullName>
            </value>
            <value>
                <fullName>Ecosystem Spotlight (customer written blog post)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Participation in Money Movement Podcast</fullName>
            </value>
            <value>
                <fullName>Speaking Opportunity (webinar, live event, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>