force-app/main/default/objects/Customer_Testimonial__c/fields/How_company_is_utilizing_Circle_products__c.field-meta.xml
<CustomField>
    <fullName>How_company_is_utilizing_Circle_products__c</fullName>
    <description>How is the company utilizing USDC or Circle products?</description>
    <inlineHelpText>How is the company utilizing USDC or Circle products?</inlineHelpText>
    <label>How company is utilizing Circle products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>