force-app/main/default/objects/Customer_Testimonial__c/fields/Location_Of_Company_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Location_Of_Company_Headquarters__c</fullName>
    <label>Location Of Company Headquarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>