force-app/main/default/objects/Customer_Testimonial__c/fields/Longevity_Of_Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Longevity_Of_Customer_Relationship__c</fullName>
    <label>Longevity Of Customer Relationship</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>1-2 Years</fullName>
            </value>
            <value>
                <fullName>2+ Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>