force-app/main/default/objects/Customer_Testimonial__c/fields/Other_Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>Other_Please_Explain__c</fullName>
    <label>Other - Please Explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>