force-app/main/default/objects/Customer_Testimonial__c/fields/Please_describe_customer_base_of_company__c.field-meta.xml
<CustomField>
    <fullName>Please_describe_customer_base_of_company__c</fullName>
    <description>Please describe the customer base of the company? (i.e. where are customers located, what service are customers receiving, any demographic or volume insights)) 
How is this helping the ‘little guy’? 
Under bank, Non Bank, etc.</description>
    <inlineHelpText>Please describe the customer base of the company? (i.e. where are customers located, what service are customers receiving, any demographic or volume insights)) 
How is this helping the ‘little guy’? 
Under bank, Non Bank, etc.</inlineHelpText>
    <label>Please describe customer base of company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>