force-app/main/default/objects/Customer_Testimonial__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blockchain Partners</fullName>
            </value>
            <value>
                <fullName>Circle Account (Capital Markets)</fullName>
            </value>
            <value>
                <fullName>Circle Account (Custody)</fullName>
            </value>
            <value>
                <fullName>Circle Account (General)</fullName>
            </value>
            <value>
                <fullName>Corporate Payments</fullName>
            </value>
            <value>
                <fullName>Merchant Payments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Stablecoin Infra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>