force-app/main/default/objects/Customer_Testimonial__c/fields/Product_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar__c</fullName>
    <label>Product Pillar</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Banking</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>Stablecoin</fullName>
            </value>
            <value>
                <fullName>Web3 services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>