force-app/main/default/objects/Customer_Testimonial__c/fields/What_Challenge_Did_Circle_Solve_For__c.field-meta.xml
<CustomField>
    <fullName>What_Challenge_Did_Circle_Solve_For__c</fullName>
    <description>What business did Circle solve for with this Customer? (Free form) 
 industry, core product offering, B2B vs. B2C, etc.?</description>
    <inlineHelpText>What business did Circle solve for with this Customer?
ex: industry, core product offering, B2B vs. B2C, etc.?</inlineHelpText>
    <label>What Challenge Did Circle Solve For?</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>