force-app/main/default/objects/Customer_Testimonial__c/fields/Why_is_company_an_interesting_use_case__c.field-meta.xml
<CustomField>
    <fullName>Why_is_company_an_interesting_use_case__c</fullName>
    <label>Why is company an interesting use case?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>