force-app/main/default/objects/Customer_Testimonial__c/validationRules/Must_Fill_State_If_Country_Is_US.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_Fill_State_If_Country_Is_US</fullName>
    <active>true</active>
    <description>State must be filled if country is US</description>
    <errorConditionFormula>AND(ISPICKVAL(Company_HQ_Country__c,&quot;US&quot;), ISBLANK(TEXT( Company_HQ_State__c )))</errorConditionFormula>
    <errorDisplayField>Company_HQ_State__c</errorDisplayField>
    <errorMessage>You must select a state if the country is set to United States</errorMessage>
</ValidationRule>